ci(gradle): fix test java 17 support