@@ -184,9 +184,23 @@ subprojects {
         environment "SPARK_LOCAL_IP", "127.0.0.1"
 
         jvmArgs (
-                '-Dconfig.file=./src/test/resources/env.conf',
-                '-Dlog4j.configuration=log4j.properties',
-                '-Djunit.jupiter.extensions.autodetection.enabled=true'
+            '-Dconfig.file=./src/test/resources/env.conf',
+            '-Dlog4j.configuration=log4j.properties',
+            '-Djunit.jupiter.extensions.autodetection.enabled=true',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/java.net=ALL-UNNAMED',
+            '--add-opens=java.base/java.nio=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.cs=ALL-UNNAMED',
+            '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
+            '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
+            '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
         )
 
         testLogging {
