@@ -28,9 +28,4 @@ dependencies {
     )
 }
 
-tasks.withType(Test) {
-    maxParallelForks = 1
-    jvmArgs "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-};
-
 djobi.createReleaseWithVariants(variants)
